Implement JWT claim customisation
